# singlemain

./: .clang-format  .gitignore  CMakeLists.txt  justfile  license.md  main.cpp  vcpkg-configuration.json  vcpkg.json
